[tool.poetry]
name = "zpf"
version = "0.1.0"
description = "ZPF's Python Framework"
authors = ["Zhongke Chen <ch3n2k@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
aiorun = "^2022.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
